--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,12 @@
 			<artifactId>hsqldb</artifactId>
 			<version>2.3.3</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.marblesit</groupId>
+			<artifactId>circuitbreaker</artifactId>
+			<version>0.0.2</version>
+		</dependency>
 
 	</dependencies>
 
